# ChangeLog for net-im/ekg2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jan 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-0.3_pre20090821.ebuild:
  Update SRC_URI.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Readd SRC_URI.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-0.3_pre20090821.ebuild:
  Change tarball name to make it distinct from autotools snapshots.

  21 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +ekg2-0.3_pre20090821.ebuild:
  Adding snapshot ebuild.

  20 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Update live ebuild to support SKIPCHECKS introduced by upstream lately.

  16 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  RDEPEND on libintl, DEPEND on gettext.

  15 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Depend on gettext instead of libintl as we need to compile the .po files.

  01 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  ekg2-9999.ebuild:
  Simplify DEPEND/RDEPEND.

  01 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +ekg2-9999.ebuild, -ekg2-99999999.ebuild:
  Rename to -9999, four digits should be enough

  01 Aug 2009; Markos Chandras <hwoarang@gentoo.org> ekg2-99999999.ebuild:
  Ebuild clean up

  25 Jul 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +ekg2-99999999.ebuild, +metadata.xml:
  Live ebuild for EKG2 IM (bug #187330).
